# ghci-complete

./: .ghci  .gitignore  LICENSE  Main.hs  README.md  TODO  ghci-complete.cabal  ghcid.sh  run.sh  stack.yaml  vim-ghci-autocomplete.cabal  vim-ghci-complete.cabal
after/ftplugin/: haskell.vim
autoload/: ghci.vim
ftplugin/: haskell.vim
plugin/: ghci.vim
src/: App.hs  Cache.hs  Complete.hs  Ghci.hs  Main.hs  Parse.hs  Server.hs  Worker.hs
src/App/: Class.hs  State.hs
test/: Main.hs
test/stub/: M.hs  Main.hs  ModA.hs
vim/autoload/: ghci.vim
