name:               ghci-complete
version:            0.1.0.0
synopsis:           Fast Vim omni-completion based on ghcid
homepage:           https://github.com/jimenezrick/ghci-complete
license-file:       LICENSE
license:            MIT
author:             Ricardo Catalinas Jiménez <r@untroubled.be>
copyright:          Copyright (c) 2018 Ricardo Catalinas Jiménez
category:           Utility
extra-source-files: README.md
build-type:         Simple
cabal-version:      2.0

library
  default-language: Haskell2010
  ghc-options:      -Wall
  hs-source-dirs:   src
  default-extensions:
      OverloadedStrings
    , OverloadedLists
    , LambdaCase
  build-depends:
      base >=4.7 && <5
    , containers
    , Cabal
    , bytestring
    , random
    , text
    , aeson
    , scientific
    , vector
    , unordered-containers
    , network-simple
    , ghc-syntax-highlighter
    , ghcid
    , rio
  exposed-modules:
      Cache
    , Complete

executable ghci-complete
  default-language: Haskell2010
  ghc-options:      -Wall
  main-is:          Main.hs
  default-extensions:
      OverloadedStrings
    , FlexibleInstances
    , MultiParamTypeClasses
  build-depends:
      base
    , ghci-complete
    , rio

test-suite test-ghci-complete
  default-language: Haskell2010
  ghc-options:      -Wall
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  main-is:          Main.hs
  build-depends:
      base
    , ghci-complete
    , ghc-syntax-highlighter
    , ghcid
    , tasty
    , tasty-hunit
