name:           vim-ghci-complete
version:        0.1.0.0
build-type:     Simple
cabal-version:  >= 1.10

executable vim-ghci-complete
  main-is: Main.hs
  hs-source-dirs:
      src
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , text
    , ghcid
    , unix
    , bytestring
    , aeson
    , unordered-containers
    , network-simple
    , vector
    , scientific
    , ghc-syntax-highlighter
  default-language: Haskell2010
