name:               vim-ghci-complete
version:            0.1.0.0
synopsis:           Fast Vim omni-completion based on ghcid
homepage:           https://github.com/jimenezrick/vim-ghci-complete
license-file:       LICENSE
license:            MIT
author:             Ricardo Catalinas Jiménez <r@untroubled.be>
copyright:          Copyright (c) 2018 Ricardo Catalinas Jiménez
category:           Utility
extra-source-files: README.md
build-type:         Simple
cabal-version:      >= 1.10

executable vim-ghci-complete
  default-language: Haskell2010
  default-extensions:
      OverloadedStrings
    , OverloadedLists
    , LambdaCase
  main-is: Main.hs
  hs-source-dirs:
      src
  ghc-options: -O2 -threaded -Wall -Wmissing-import-lists
  build-depends:
      base >=4.7 && <5
    , bytestring
    , text
    , aeson
    , scientific
    , vector
    , unordered-containers
    , network-simple
    , ghc-syntax-highlighter
    , ghcid
