name:               vim-ghci-complete
version:            0.1.0.0
synopsis:           Fast Vim omni-completion based on ghcid
homepage:           https://github.com/jimenezrick/vim-ghci-complete
license-file:       LICENSE
license:            MIT
author:             Ricardo Catalinas Jiménez <r@untroubled.be>
copyright:          Copyright (c) 2018 Ricardo Catalinas Jiménez
category:           Utility
extra-source-files: README.md
build-type:         Simple
cabal-version:      2.0

library
  default-language: Haskell2010
  ghc-options:      -Wall
  hs-source-dirs:   src
  default-extensions:
      OverloadedStrings
    , OverloadedLists
    , LambdaCase
  build-depends:
      base >=4.7 && <5
    , Cabal
    , bytestring
    , random
    , text
    , aeson
    , scientific
    , vector
    , unordered-containers
    , network-simple
    , ghc-syntax-highlighter
    , ghcid
  exposed-modules:
      Ghci

executable vim-ghci-complete
  default-language: Haskell2010
  ghc-options:      -Wall
  main-is:          Main.hs
  build-depends:
      base
    , vim-ghci-complete

test-suite test
  default-language: Haskell2010
  ghc-options:      -Wall
  type:             exitcode-stdio-1.0
  main-is:          Main.hs
  hs-source-dirs:   test
  default-extensions:
      OverloadedStrings
    , OverloadedLists
    , LambdaCase
  build-depends:
      base
    , vim-ghci-complete
    , ghc-syntax-highlighter
    , ghcid
    , tasty
    , tasty-hunit
